--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,16 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install pytest pytest-cov
+  - pip install coveralls
 # command to run tests
 script:
-  - pytest
+  - pytest --cov=./
 
 branches:
   only:
   - deploy
 after_success:
  - coveralls
+ - coverage report
+ 
